apps/af-utils/af-users-graph/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: af-users-graph
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: af-users-graph
  template:
    metadata:
      labels:
        app: af-users-graph
    spec:
      enableServiceLinks: false
      nodeSelector: { "cms-af-prod": "true" }
      tolerations:
        - key: "hub.jupyter.org/dedicated"
          operator: "Equal"
          value: "cms-af"
          effect: "NoSchedule"
      containers:
        - name: nginx
          image: geddes-registry.rcac.purdue.edu/docker-hub-cache/library/nginx:alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: img-vol
              mountPath: /usr/share/nginx/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
      volumes:
        - name: img-vol
          persistentVolumeClaim:
            claimName: af-users-graph-pvc
        - name: nginx-config
          configMap:
            name: af-users-graph-nginx-config
