apps/af-utils/af-users-graph/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: af-users-graph
spec:
  ingressClassName: public
  rules:
    - host: cms.geddes.rcac.purdue.edu
      http:
        paths:
          - path: /users-graph/
            pathType: Prefix
            backend:
              service:
                name: af-users-graph
                port:
                  number: 80
